# ruad

./: Cargo.toml
migrations/2019-08-30-004601_create_words_table/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
