[package]
name = "ruad"
version = "0.1.0"
authors = ["Jose Albizures <albizures3601@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
scraper = "0.10.1"
diesel = { version = "1.4.2", features = ["postgres"] }
dotenv = "0.14.1"
